--- a/package.json
+++ b/package.json
@@ -19,6 +19,10 @@
   "dependencies": {
     "express": "^4.17.1",
     "node": "^17.1.0",
-    "pug": "^3.0.2"
+    "pug": "^3.0.2",
+    "sqlite3": "^5.1.7"
+  },
+  "devDependencies": {
+    "tailwindcss": "^3.4.4"
   }
 }
